@@ -601,7 +601,7 @@ public class jsXe {
     
     private static final String MajorVersion = "0";
     private static final String MinorVersion = "1";
-    private static final String BuildVersion = "10";
+    private static final String BuildVersion = "11";
     private static final String BuildType    = "development";
    // private static final String BuildType    = "stable";
     private static Vector XMLDocuments = new Vector();
